feat: 增加角色、菜单模块部分功能
